# sus-scanner-py

./: .gitignore  Publish-ToGitHub.ps1  README.md  publish_to_github.sh  pyproject.toml  requirements.txt  setup.py  sus_scanner.py  sus_scanner_usage_demo.py  suspicion_report.csv  suspicion_report_20250901_184945.csv  suspicion_report_20250901_185433.csv  suspicion_report_20250904_175231.csv  suspicion_report_20250904_182930.csv  suspicion_report_20250904_200221.csv  suspicion_report_20250904_201529.csv  suspicion_report_20250904_201833.csv  usernames.txt
.github/workflows/: ci.yml
examples/: demo.py
src/sus_scanner/: __init__.py  cli.py  scanner.py  sus_scanner.py  suspicion_report_20250905_230450.csv
tests/: test_scanner.py
